fixed text overflow in team section

--- a/css/main.css
+++ b/css/main.css
@@ -767,14 +767,12 @@ body {
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .team__item {
-    -ms-flex-preferred-size: calc((100% - 30px) / 2);
-        flex-basis: calc((100% - 30px) / 2);
+    width: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
   .team__item {
-    -ms-flex-preferred-size: calc((100% - 90px) / 4);
-        flex-basis: calc((100% - 90px) / 4);
+    width: calc((100% - 90px) / 4);
   }
 }
 @media screen and (max-width: 767px) {
@@ -784,7 +782,7 @@ body {
 }
 
 .member__info {
-  padding: 30px 0 24px;
+  padding: 30px 15px 24px;
 }
 @media screen and (min-width: 1200px) {
   .member__info {
@@ -801,6 +799,7 @@ body {
 .member__position {
   margin-bottom: 16px;
   color: #757575;
+  word-wrap: break-word;
 }
 
 .social {
@@ -1554,8 +1553,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
