--- a/sass/layout/main-sections/_team.scss
+++ b/sass/layout/main-sections/_team.scss
@@ -36,11 +36,11 @@
 
 .team__item {
 	@media screen and (min-width: 768px) and (max-width: 1199px) {
-		flex-basis: calc((100% - 30px) / 2);
+		width: calc((100% - 30px) / 2);
 	}
 
 	@media screen and (min-width: 1200px) {
-		flex-basis: calc((100% - 90px) / 4);
+		width: calc((100% - 90px) / 4);
 	}
 
 	font-size: 16px;
@@ -65,7 +65,7 @@
 }
 
 .member__info {
-	padding: 30px 0 24px;
+	padding: 30px 15px 24px;
 
 	@media screen and (min-width: 1200px) {
 		padding: 30px 32px;
@@ -83,6 +83,8 @@
 	margin-bottom: 16px;
 
 	color: $secondary-text-color;
+
+	word-wrap: break-word;
 }
 
 .social {
