--- a/sass/layout/portfolio-section/_cards.scss
+++ b/sass/layout/portfolio-section/_cards.scss
@@ -61,7 +61,7 @@
 
 	background-color: rgba(33, 150, 243, 0.9);
 
-	transform: translateY(100%);
+	transform: translateY(101%);
 	transition: transform 250ms $timing-function;
 
 	.cards__link:hover &,
